# lerobot_project

./: .gitignore  README.md  information.md  move260626_preprocess.txt  pose_math.md  refactoring.md  retargeting.md
custom/common/lerobot_ext_core/: canonical_ee10.py  keys.py  schemas.py
custom/common/lerobot_ext_core/schemas/: __init__.py  canonical_ee10.py  canonical_ee10_se3.py
custom/envs/metaworld/: canonical.py  collect.py
custom/policies/mypolicy/lerobot_policy_mypolicy/: pyproject.toml
custom/policies/mypolicy/lerobot_policy_mypolicy/src/lerobot_policy_mypolicy/: __init__.py  configuration_mypolicy.py  modeling_mypolicy.py  processor_mypolicy.py
custom/policies/umidiffusion/lerobot_policy_umidiffusion/: pyproject.toml
custom/policies/umidiffusion/lerobot_policy_umidiffusion/src/lerobot_policy_umidiffusion/: __init__.py  configuration_umidiffusion.py  modeling_umidiffusion.py  processor_umidiffusion.py  runtime_buffer.py  steps.py
custom/processors/robot_maps/lerobot_processor_robot_maps/: pyproject.toml
custom/processors/robot_maps/lerobot_processor_robot_maps/src/lerobot_processor_robot_maps/: __init__.py  steps.py
custom/scripts/data_processing/: raw_inspect.py
custom/scripts/sim/: collect_metaworld.py  rollout_metaworld.py
custom/utils/lerobot_canonical/: pyproject.toml
custom/utils/lerobot_canonical/src/lerobot_canonical/schemas/: __init__.py  canonical_ee10_se3.py
tools/data_processing/: raw_inspect.py
