[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_mypolicy"
version = "0.1.0"
description = "Custom LeRobot policy: DiffusionPolicy + runtime anchor-relative pose representation"
requires-python = ">=3.10"
# 정책은 런타임 step 패키지에 의존한다 (processor_mypolicy.py 가 import).
# 설치 순서: robot_maps -> mypolicy
dependencies = ["lerobot", "lerobot_processor_robot_maps"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobot_policy_mypolicy*"]
