[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_umidiffusion"
version = "0.1.0"
description = "Custom LeRobot policy: DiffusionPolicy + runtime anchor-relative pose representation"
requires-python = ">=3.10"
# 직접 import 하는 것만 선언한다 (전이 의존에 기대지 않음):
#   configuration/processor/steps -> lerobot_canonical (keys, schemas, codec)
# 런타임 step 은 이 패키지 안(steps.py)에 있으므로 별도 의존 없음 —
# lerobot 문서의 BYO Policy 구조 그대로 config+modeling+processor 를 한 패키지에 둔다.
# 이름 규칙: lerobot_policy_ 접두사 -> register_third_party_plugins() 가 자동 import
dependencies = ["lerobot", "lerobot_canonical"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobot_policy_umidiffusion*"]
