[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_processor_robot_maps"
version = "0.1.0"
description = "Runtime pose representation steps (anchor-relative / delta) for LeRobot"
requires-python = ">=3.10"
dependencies = ["lerobot"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobot_processor_robot_maps*"]
